[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/door.png" type="Texture" id=1]
[ext_resource path="res://Door.gd" type="Script" id=2]
[ext_resource path="res://DoorCollider.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 16 )

[sub_resource type="Animation" id=2]
resource_name = "CloseLeft"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("DoorCollider:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=5]
resource_name = "CloseRight"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("DoorCollider:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "OpenLeft"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("DoorCollider:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, 92, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 1.7, 2 )
}

[sub_resource type="Animation" id=4]
resource_name = "OpenRight"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("DoorCollider:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, -92, -0.25, 0, 0.25, 0, -90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.6, 2 )
}

[node name="Door" type="Node2D"]
script = ExtResource( 2 )

[node name="DoorCollider" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorCollider"]
position = Vector2( 0, 13 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DoorCollider"]
position = Vector2( 0, 13 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CloseLeft = SubResource( 2 )
anims/CloseRight = SubResource( 5 )
anims/OpenLeft = SubResource( 3 )
anims/OpenRight = SubResource( 4 )

[node name="ChangeTrigger" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ChangeTrigger" to="." method="_on_ChangeTrigger_timeout"]
